EPMRPP-74066 || Fix wrong colors

--- a/app/src/components/inputs/inputRadio/inputRadio.scss
+++ b/app/src/components/inputs/inputRadio/inputRadio.scss
@@ -122,7 +122,7 @@
   &.toggler-medium {
     width: 20px;
     height: 20px;
-    border-color: $COLOR--dark-gray-2;
+    border-color: $COLOR--darkmode-gray-200;
     background-color: transparent;
 
     &::after {
@@ -136,13 +136,21 @@
     min-width: 16px;
     height: 16px;
     margin-right: 16px;
-    border-color: $COLOR--dark-gray-2;
+    border-color: $COLOR--darkmode-gray-200;
     background-color: transparent;
 
     &::after {
       width: 8px;
       height: 8px;
     }
+  }
+
+  &:hover {
+    border-color: $COLOR--darkmode-gray-100;
+  }
+
+  &:hover:after {
+    background-color: $COLOR--darkmode-topaz-hover;
   }
 
   &.children-container {
@@ -152,11 +160,15 @@
   }
 
   &.disabled {
-    opacity: 0.3;
+    opacity: 0.5;
 
     .toggler {
-      background-color: transparent;
-      border-color: $COLOR--dark-gray-2;
+      &::after {
+        background-color: $COLOR--darkmode-topaz-main;
+      }
+      &:hover {
+        border-color: $COLOR--darkmode-gray-200;
+      }
     }
   }
 }
